--- a/.config/i3/config
+++ b/.config/i3/config
@@ -54,8 +54,6 @@ new_window pixel 1
 
 # Set inner/outer gaps
 gaps inner 0
-gaps horizontal 13
-gaps top 13
 
 # show window title bars (not officially supported with i3gaps)
 #default_border normal
@@ -442,11 +440,10 @@ exec --no-startup-id /usr/bin/dunst
 #exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
 
 exec --no-startup-id sleep 2 && xfce4-terminal
-exec --no-startup-id sleep 4 && firefox https://doc.rust-lang.org/book/
-exec --no-startup-id sleep 8 && code
+exec --no-startup-id sleep 6 && firefox https://reddit.com
+exec --no-startup-id sleep 4 && code
 exec --no-startup-id sleep 2 && thunar
 exec --no-startup-id sleep 6 && obsidian
-exec --no-startup-id sleep 4 && firefox https://reddit.com
 
 ###############
 # system tray #
@@ -522,7 +519,7 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 # Start i3bar to display a workspace bar
 # (plus the system information i3status finds out, if available)
 bar {
-		font pango: Noto Sans Regular 19
+		font pango: Noto Sans Regular 14
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
 	    	position bottom
 #	    	i3bar_command i3bar --transparency
@@ -530,13 +527,13 @@ bar {
 # reference: https://i3wm.org/docs/userguide.html#_tray_output
 		    #tray_output primary
 		    tray_padding 0
-		    padding 3px 0
+		    #padding 3px 0
 # When strip_workspace_numbers is set to yes,
 # any workspace that has a name of the form
 # “[n][:][NAME]” will display only the name.
 strip_workspace_numbers yes
 ##strip_workspace_name no
-workspace_min_width 50
+# workspace_min_width 50
 		    colors {
 		    separator          $purple
 		    background         $darkgrey
