adds color to battery charging and discharging

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -29,7 +29,7 @@ disabled = #707880
 [bar/example]
 bottom = true
 width = 100%
-height = 24pt
+height = 35pt
 radius = 6
 
 ; dpi = 96
@@ -50,8 +50,8 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = Symbols Nerd Font;2 
-font-1 = monospace;2
+font-0 = Symbols Nerd Font:pixelsize=17;2 
+font-1 = monospace:pixelsize=17;2
 
 modules-left = xworkspaces xwindow
 modules-right = git filesystem pulseaudio battery memory cpu wlan eth date
@@ -76,6 +76,7 @@ icon-1 = 2;󰨞
 icon-2 = 3;
 icon-3 = 4;󱂵
 icon-4 = 5;󰹕
+icon-5 = 6;󰙯
 icon-default = 󱂬
 label-active = %icon%
 label-active-background = ${colors.background-alt}
@@ -95,7 +96,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:10:...%
 
 [module/git]
 type = custom/script
@@ -135,14 +136,14 @@ type = internal/battery
 ; Default: 100
 full-at = 99
 ;format-discharging = <ramp-capacity> <label-discharging>
-label-charging = >+ %percentage%%
+label-charging = %{F#0f0}󰂄%{F-} %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = <- %percentage%%
+label-discharging = %{F#f50}󰂌%{F-} %percentage%%
 ; format-low once this charge percentage is reached
 ; Default: 10
 ; New in version 3.6.0
@@ -199,12 +200,12 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %{F#F0C674}%ifname%%{F-} %essid% 
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#F0C674}%ifname%%{F-} 
 
 [module/date]
 type = internal/date
