--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,7 +22,7 @@
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango: Noto Sans Regular 19
+font pango: Noto Sans Regular 18
 
 # set the mod key to the winkey:
 set $mod Mod4
@@ -67,6 +67,9 @@ floating_modifier $mod
 # switch/iterate between workspaces
 bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
+
+# bindsym to toggle i3bar
+bindsym $mod+b i3bar mode toggle
 
 # switch to workspace
 bindsym $mod+1    workspace  $ws1
@@ -201,7 +204,7 @@ bindsym XF86MonBrightnessUp exec brightnessctl set +5% && notify-send "5% birght
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%- && notify-send "5% darker"
 
 ## Screenshots
-bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)"
+bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date +%A-%H:%M).png"
 
 ## Clipboard Screenshots
 bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
@@ -298,12 +301,12 @@ bindsym $mod+Shift+p exec ~/.config/i3/scripts/power-profiles
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:"
-set $ws2 "2:"
-set $ws3 "3:"
-set $ws4 "4:"
-set $ws5 "5:"
-set $ws6 "6:"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
@@ -322,21 +325,24 @@ workspace_auto_back_and_forth yes
 
 # bind program to workspace and focus to them on startup:
 assign [class="Xfce4-terminal"] $ws1
-assign [class="(?i)firefox"] $ws3
+assign [class="firefox"] $ws3
 assign [class="Thunar"] $ws4
 assign [class="thunderbird"] $ws6
 assign [class="TelegramDesktop"] $ws5
 assign [class="code-oss"] $ws2
 assign [class="obsidian"] $ws5
+assign [class="discord"] $ws6
 
 # automatic set focus new window if it opens on another workspace than the current:
 for_window [class=Xfce4-terminal] focus
-for_window [class=(?i)firefox] focus
+for_window [class=firefox] focus
+#for_window [class=(?i)firefox] focus
 for_window [class=Thunar] focus
 for_window [class=Thunderbird] focus
 for_window [class=TelegramDesktop] focus
 for_window [class=code-oss] focus
 for_window [class=obsidian] focus
+for_window [class=discord] focus
 
 ##############
 # compositor #
@@ -400,7 +406,7 @@ exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # set wallpaper
 # exec --no-startup-id sleep 2 && nitrogen --restore
-exec --no-startup-id sleep 1 && feh --bg-fill /usr/share/endeavouros/backgrounds/os_wallpaper.png
+exec --no-startup-id sleep 1 && feh --bg-fill /usr/share/endeavouros/backgrounds/eos_wallpapers_community/Endy_vector_watching.png
 
 # set powersavings for display:
 exec --no-startup-id xset s 480 dpms 600 600 600
@@ -442,6 +448,7 @@ exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id sleep 2 && xfce4-terminal
 exec --no-startup-id sleep 6 && firefox https://reddit.com
 exec --no-startup-id sleep 4 && code
+exec --no-startup-id sleep 5 && discord
 exec --no-startup-id sleep 2 && thunar
 exec --no-startup-id sleep 6 && obsidian
 
@@ -516,35 +523,44 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 # bar settings (input comes from i3blocks) #
 ############################################
 
+# kill all running polybar instances
+
+exec killall polybar
+
+# run polybar
+
+exec_always polybar &
+
 # Start i3bar to display a workspace bar
 # (plus the system information i3status finds out, if available)
-bar {
-		font pango: Noto Sans Regular 14
-		status_command i3blocks -c ~/.config/i3/i3blocks.conf
-	    	position bottom
+#bar {
+#		font pango: Noto Sans Regular 14
+#		status_command i3blocks -c ~/.config/i3/i3blocks.conf
+#	    	position bottom
 #	    	i3bar_command i3bar --transparency
 # it could be that you have no primary display set: set one (xrandr --output <output> --primary)
 # reference: https://i3wm.org/docs/userguide.html#_tray_output
 		    #tray_output primary
-		    tray_padding 0
+#		    tray_padding 0
+#		    mode hide
 		    #padding 3px 0
 # When strip_workspace_numbers is set to yes,
 # any workspace that has a name of the form
 # “[n][:][NAME]” will display only the name.
-strip_workspace_numbers yes
+#strip_workspace_numbers yes
 ##strip_workspace_name no
 # workspace_min_width 50
-		    colors {
-		    separator          $purple
-		    background         $darkgrey
-		    statusline         $white
+#		    colors {
+#		    separator          $purple
+#		    background         $darkgrey
+#		    statusline         $white
 #                          		border 		        bg		txt		indicator
-		focused_workspace	$white  	   	#807dfe 	$white  	$purple
-		active_workspace	$lightblue      	$mediumgrey	$darkgrey	$purple
-		inactive_workspace	$darkgrey   		$darkgrey	$grey		$purple
-		urgent_workspace	$urgentred	    	$urgentred	$white		$purple
-	}
-}
+#		focused_workspace	$white  	   	#807dfe 	$white  	$purple
+#		active_workspace	$lightblue      	$mediumgrey	$darkgrey	$purple
+#		inactive_workspace	$darkgrey   		$darkgrey	$grey		$purple
+#		urgent_workspace	$urgentred	    	$urgentred	$white		$purple
+#	}
+#}
 
 # you can add different bars for multidisplay setups on each display:
 # set output HDMI-0 to the display you want the bar, --transparency can be set.
