adjusts disabling and enabling of the polybar

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -525,7 +525,7 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 
 # kill all running polybar instances
 
-exec killall polybar
+exec_always killall polybar
 
 # run polybar
 
