--- a/.config/i3/config
+++ b/.config/i3/config
@@ -525,11 +525,11 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 
 # kill all running polybar instances
 
-exec_always killall polybar
+exec_always --no-startup-id killall polybar && sleep 0.01
 
 # run polybar
 
-exec_always polybar &
+exec_always --no-startup-id polybar &
 
 # Start i3bar to display a workspace bar
 # (plus the system information i3status finds out, if available)
