adds i3blocks section to change keyboard layout from us to at and viceversa

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -2,7 +2,7 @@
 
 # source is available here:
 # https://raw.githubusercontent.com/endeavouros-team/endeavouros-i3wm-setup/main/.config/i3/i3blocks.conf
-# Maintainer: joekamprad [joekamprad@endeavouros.com]
+# Maintainer: joekamprad [joekamprad //a_t// endeavouros.com]
 # Former Visual Designer: Florent Valetti [@FLVAL EndeavourOS]
 # created for i3wm setup on EndeavourOS
 # https://endeavouros.com
@@ -47,35 +47,26 @@ markup=pango
 #interval=1800
 #color=#7275b3
 
-#[terminal]
-#full_text= 
-#color=#807dfe
-#command=i3-msg -q exec xfce4-terminal
-
-#[browser]
-#full_text= 
-#color=#ff7f81
-#command=i3-msg -q exec firefox
-
-#[files]
-#full_text= 
-#color=#7f3fbf
-#command=i3-msg -q exec thunar ~/
-
-[files]
-full_text= 
-color=#000000
-command=i3-msg -q exec firefox https://github.com/SimonGschnell
-
-
 [terminal]
-interval=4
-command=python ~/.config/i3/scripts/py_script.py
+full_text= 
+color=#807dfe
+command=i3-msg -q exec xfce4-terminal
 
 [browser]
-interval=100
-command=~/.config/i3/scripts/scrape
-#i3-msg -q exec spotify
+full_text= 
+color=#ff7f81
+command=i3-msg -q exec firefox
+
+[files]
+full_text= 
+color=#7f3fbf
+command=i3-msg -q exec thunar ~/
+
+[layout]
+label=  
+full_text= 
+color=#6666cc
+command=~/.config/i3/scripts/layout
 
 #[mail]
 #full_text= 
@@ -83,7 +74,7 @@ command=~/.config/i3/scripts/scrape
 #command=i3-msg -q exec thunderbird
 
 [simple-2]
-full_text=  :  
+full_text=: :
 color=#717171
 
 # Disk usage
@@ -91,11 +82,8 @@ color=#717171
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk_image]
-full_text=
-color=#807dfe
-
 [disk]
+label=
 instance=/
 command=~/.config/i3/scripts/disk
 interval=30
@@ -103,29 +91,20 @@ interval=30
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-[memory_image]
-full_text=
-color=#807dfe
-
 [memory]
+label=
 command=~/.config/i3/scripts/memory
 interval=2
 
-[cpu_usage_image]
-full_text=
-color=#807dfe
-
 [cpu_usage]
+label=
 command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
 interval=2
 
 [CPU-temperature]
-full_text=
-color=#c74c4c
-
-[CPU-temperature]
-command=~/.config/i3/scripts/temperature | cut -c5- 
+label=
+command=~/.config/i3/scripts/temperature
 interval=30
 #T_WARN=70
 #T_CRIT=90
@@ -139,9 +118,8 @@ interval=30
 #command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
 #interval=30
 
-
 [bandwidth]
-command=~/.config/i3/scripts/bandwidth2 
+command=~/.config/i3/scripts/bandwidth2
 interval=persist
 
 # Battery indicator
@@ -153,7 +131,7 @@ label=
 interval=30
 
 [simple-2]
-full_text=  :  
+full_text=: :
 color=#717171
 
 [pavucontrol]
@@ -193,12 +171,9 @@ color=#407437
 command=~/.config/i3/scripts/ppd-status
 interval=5
 
-[time_label]
-full_text=
-color=#717171
-
 [time]
-command=LANG=en date '+%A %d %B %H:%M:%S'
+#label=
+command=date '+%a %d %b %H:%M:%S'
 interval=1
 
 [shutdown_menu]
@@ -206,5 +181,6 @@ full_text=
 command=~/.config/i3/scripts/powermenu
 
 [simple-2]
-full_text= : : 
+full_text=: :
 color=#717171
+
